<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
        android:adjustViewBounds="true"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:src="@drawable/hibllogo"/>
        <TextView
            android:textColor="@color/secondaryTextColor"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_text"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textColor="@color/secondaryTextColor"/>

    <TextView
        android:layout_marginBottom="32dp"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_msg"
        android:textColor="@color/secondaryTextColor"
        android:alpha=".7"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobileno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_no"

        >

        <com.google.android.material.textfield.TextInputEditText
           android:backgroundTint="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/transition_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputLayout
        android:visibility="gone"
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp">

        <com.google.android.material.textfield.TextInputEditText
            android:backgroundTint="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:visibility="gone"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:backgroundTint="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.button.MaterialButton
    android:padding="16dp"
    android:id="@+id/continue_login"
    android:layout_marginTop="32dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     android:text="@string/conti"/>


    </LinearLayout>
</LinearLayout>

</LinearLayout>