<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment.PaymentListActivity">
    <androidx.appcompat.widget.Toolbar
        android:elevation="2dp"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/payment_details"
        app:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/band_text_color"
        android:weightSum="7"
        android:scrollbars="horizontal"
        android:layout_below="@id/toolbar"

        >



        <TextView
            android:background="@color/list_txt_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/proposal_form_no"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="2"
            android:background="@color/list_txt_bg"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/amount"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="2"
            android:background="@color/list_txt_bg"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/balance"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/list_txt_bg"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/select"
            android:textStyle="bold" />




    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/save"
        android:id="@+id/recyclerView"/>

    <com.google.android.material.button.MaterialButton
        android:padding="16dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/save"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_payment"
      />
</RelativeLayout>