<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:id="@+id/myroot"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:elevation="2dp"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/register_new_animal"
        app:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >

    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_above="@id/btn_layout"
        android:scrollbars="none"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
       >
    <LinearLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:layout_marginBottom="8dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">


        <AutoCompleteTextView
                android:id="@+id/city_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hospital"
            android:layout_marginBottom="8dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">


            <AutoCompleteTextView

                android:id="@+id/hospital_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:cardCornerRadius="0dp"
            >

            <LinearLayout
                android:layout_margin="16dp"

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/proposal_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/proposal_form_no"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/proposal_no_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>



                <ImageView
                    android:src="@drawable/upload"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"

                    android:tooltipText="Upload Image"

                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/proposal_no_upload"


                    />

            </LinearLayout>



        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:cardCornerRadius="0dp"

            >

            <LinearLayout
                android:layout_margin="16dp"

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/adhar_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/aadhar_no"
                    android:layout_marginBottom="8dp"


                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:backgroundTint="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                       android:maxLength="12"
                        />

                </com.google.android.material.textfield.TextInputLayout>



                <ImageView
                    android:src="@drawable/upload"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"

                    android:tooltipText="Upload Image"

                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/aadhar_no_upload"


                    />

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="number"
                android:backgroundTint="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="2"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:id="@+id/no_of_animals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_of_animal"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="number"
                android:backgroundTint="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:id="@+id/caste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
               android:id="@+id/caste_txt"
                android:hint="@string/caste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lwe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/area"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/area_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/duration"
        android:layout_marginBottom="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
             android:id="@+id/duration_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>




        <CheckBox
            android:id="@+id/wptd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="@string/ptd"/>


    </LinearLayout>
</ScrollView>

    <LinearLayout
        android:padding="8dp"
        android:background="@color/offwhite"
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        android:padding="16dp"
        android:layout_marginRight="8dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/save"
       />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:padding="16dp"

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/save_next"
            />
</LinearLayout>
</RelativeLayout>



