<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/myroot"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:elevation="2dp"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/animals_detail"
        app:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/band_text_color"
        android:layout_below="@id/toolbar"
        android:id="@+id/header"
        android:orientation="vertical"
        android:paddingBottom="1dp"
        >
        <LinearLayout
        android:orientation="horizontal"


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/list_txt_bg"
        android:weightSum="5"
        android:scrollbars="horizontal"


        >
        <TextView
            android:background="@color/list_txt_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1.5"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/tag_no"
            android:textStyle="bold" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/band_text_color"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1.5"
            android:background="@color/list_txt_bg"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/animal_type"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/band_text_color"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/list_txt_bg"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/sum_insured"
            android:textStyle="bold" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/band_text_color"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@color/list_txt_bg"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text=""
            android:textStyle="bold" />






    </LinearLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/save"
        android:id="@+id/recyclerView"/>

    <com.google.android.material.button.MaterialButton
      android:padding="16dp"
        android:id="@+id/save"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_next"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>



